# geomscreen

./: README.md  README.qmd  pyproject.toml
examples/: batched.py  combustion.py  organic_phos.py  phosphorescence.py  strain.py
examples/batched/: example.py  helpers.py
src/geomscreen/: __init__.py
test_data/: KAVJOH01.mol2  combustion_reactants.csv  cycloalkanes.csv  irppy3.csv
